--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 9898
+
 spring:
   data:
     mongodb:
@@ -6,8 +9,7 @@ spring:
 
 eureka:
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    enabled: false
 
 ---
 spring:
@@ -21,7 +23,6 @@ eureka:
   instance:
     lease-renewal-interval-in-seconds: 10
   client:
-    register-with-eureka: true
-    fetch-registry: true
+    enabled: true
     service-url:
       defaultZone: http://localhost:8989/eureka/
